--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+#temporary files which should be ignored
+temp/
+# Ignore environment file
+.env
 # User-specific files
 *.rsuser
 *.suo
